--- a/app.css
+++ b/app.css
@@ -66,4 +66,17 @@ body {
     padding: 15px 25px;
     width: 100%;
     max-width: 960px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.pricing-plan {
+    border-bottom: 1px solid #e1f1ff;
+}
+
+.pricing-img {
+    margin-bottom: 25px;
+    width: 100%;
 }
